--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 <body>
     <!-- <script type="text/javascript" src="js/01-HolaMundo-Variables.js"></script> -->
     <!-- <script type="text/javascript" src="js/02-Varisbles-pt2.js"></script> -->
-    <script type="text/javascript" src="js/03-Operaciones-basicas.js"></script>
+    <!-- <script type="text/javascript" src="js/03-Operaciones-basicas.js"></script> -->
+    <!-- <script type="text/javascript" src="js/04-condicionales.js"></script> -->
+    <!-- <script type="text/javascript" src="js/05-match.js"></script> -->
+    <!-- <script type="text/javascript" src="js/06-match-frutas.js"></script> -->
+     
+    <!-- <ul>
+        <li id="numbers"></li>
+    </ul>
+
+    <script type="text/javascript" src="js/07-bucle-for.js"> </script> -->
+
+    <!-- <p id="numbers"></p>
+
+    <script type="text/javascript" src="js/08-mientras.js"> </script> -->
+
+    <p id="sum"></p>
+    <hr>
+    <p id="result"></p>
+
+    <script type="text/javascript" src="js/09-calculadora.js"> </script>
 </body>
 </html>
