--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
 
     <script type="text/javascript" src="js/08-mientras.js"> </script> -->
 
-    <p id="sum"></p>
+    <!-- <p id="sum"></p>
     <hr>
     <p id="result"></p>
 
-    <script type="text/javascript" src="js/09-calculadora.js"> </script>
+    <script type="text/javascript" src="js/09-calculadora.js"> </script> -->
+
+    <!-- <p id="sum"></p>
+    <hr>
+    <p id="result"></p>
+
+    <script type="text/javascript" src="js/09.1-doWhile.js"> </script> -->
+
+    <!-- <script type="text/javascript" src="js/10-alets.js"> </script> -->
+     
+    <!-- <script type="text/javascript" src="js/11-funcions.js"> </script> -->
+
+    <!-- <script type="text/javascript" src="js/12-parametrosRest.js"> </script> -->
+
+    <script type="text/javascript" src="js/13-arrays.js"> </script>
 </body>
 </html>
