--- a/index.html
+++ b/index.html
@@ -16,31 +16,29 @@
     <!-- <ul>
         <li id="numbers"></li>
     </ul>
-
     <script type="text/javascript" src="js/07-bucle-for.js"> </script> -->
 
     <!-- <p id="numbers"></p>
-
     <script type="text/javascript" src="js/08-mientras.js"> </script> -->
 
     <!-- <p id="sum"></p>
     <hr>
     <p id="result"></p>
-
     <script type="text/javascript" src="js/09-calculadora.js"> </script> -->
 
     <!-- <p id="sum"></p>
     <hr>
     <p id="result"></p>
-
     <script type="text/javascript" src="js/09.1-doWhile.js"> </script> -->
 
     <!-- <script type="text/javascript" src="js/10-alets.js"> </script> -->
-     
     <!-- <script type="text/javascript" src="js/11-funcions.js"> </script> -->
-
     <!-- <script type="text/javascript" src="js/12-parametrosRest.js"> </script> -->
+    <!-- <script type="text/javascript" src="js/13-arrays.js"> </script> -->
+    <!-- <script type="text/javascript" src="js/14-callbacks.js"> </script> -->
+    <!-- <script type="text/javascript" src="js/14.2-functions-pt2.js"> </script> -->
+    <!-- <script type="text/javascript" src="js/15-metodos-y-funciones.js"> </script> -->
 
-    <script type="text/javascript" src="js/13-arrays.js"> </script>
+    <script type="text/javascript" src="js/15-objetos.js"> </script>
 </body>
 </html>
