--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!-- <script type="text/javascript" src="js/14.2-functions-pt2.js"> </script> -->
     <!-- <script type="text/javascript" src="js/15-metodos-y-funciones.js"> </script> -->
 
-    <script type="text/javascript" src="js/15-objetos.js"> </script>
+    <!-- <script type="text/javascript" src="js/15-objetos.js"> </script> -->
+    <script type="text/javascript" src="js/notas.js">
 </body>
 </html>
