--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <!-- <script type="text/javascript" src="js/15-metodos-y-funciones.js"> </script> -->
 
     <!-- <script type="text/javascript" src="js/15-objetos.js"> </script> -->
-    <script type="text/javascript" src="js/notas.js">
+    <!-- <script type="text/javascript" src="js/notas.js"> -->
+    <!-- <script type="text/javascript" src="js/16-map-forEach.js"></script> -->
+    <!-- <script type="text/javascript" src="js/17-functions-flow.js"></script> -->
+    <script type="text/javascript" src="js/18-objetos2.js"></script>
 </body>
 </html>
